[PE] Fix fragment clip and paint offset under multicol vertical-rl scrolled

The previous code in VisualOffsetFromPaintOffsetRoot() converting the result
into scrolling contents space used ScrolledContentOffset which mismatched
the new ScrollTranslation which also includes scroll origin. Now use
ScrollTranslation instead.

Also removed the wrong remedy about scroll origin in one of the callers.

Bug: 887423
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I9a72ed6ddc066c5b4c9970037ed4c4287c5a2f0f
Reviewed-on: https://chromium-review.googlesource.com/1239170
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593572}
Former-commit-id: 5a5647c52f752cbd219ab7d81b6324910e196a65